deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-db            
  labels:
    app: admin-db
spec:
  replicas: 2
  selector:
    matchLabels:
      app: admin-db
  template:
    metadata:
      labels:
        app: admin-db
    spec:
      containers:
      - name: admin-client
        image: admin-db:latest 
        imagePullPolicy: IfNotPresent  # Fixed typo: changed 'imagePullPlociy'
        ports:
        - containerPort: 5173
