service.yml
apiVersion: v1
kind: Service
metadata:
  name: dashboard-service
spec:
  type: NodePort
  selector:
    app: admin-db
  ports:
    - name: client
      port: 5173     
      targetPort: 5173
      nodePort: 30009
