ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-adb
spec:
  rules:
  - host: "admin-db.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: dashboard-service 
            port:
              number: 5173
